# docker-container-size-versus

./: .gitignore  README.md
cpp/: CMakeLists.txt  Dockerfile  main.cc
dotnet/: Dockerfile  Program.cs  Startup.cs
dotnet/Properties/: launchSettings.json
golang/: Dockerfile  main.go
node/: Dockerfile  index.js  package.json
php/: .dockerignore  Dockerfile  index.php
python/: Dockerfile  main.py
ruby/: Dockerfile  Gemfile  app.rb
